# owlreadyL

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  annotation.py  base.py  class_construct.py  driver.py  entity.py  individual.py  namespace.py  observe.py  owlready2_optimized.c  owlready2_optimized.pyx  prop.py  pyproject.toml  rdflib_store.py  reasoning.py  requirements.txt  rply.py  rule.py  setup.cfg  setup.py  tripelite_update.py  triplelite.py  util.py
doc/: README.md  annotations.rst  conf.py  contact.rst  datatype.rst  development.rst  general_class_axioms.rst  index.rst  intro.rst  namespace.rst  onto.rst  reasoning.rst  sparql.rst  sync.rst  world.rst
pymedtermino2/: model.py  umls.py
pymedtermino2/omop_cdm/: __init__.py  import_omop_cdm.py  import_omop_sample_dataset.py
sparql/: __init__.py  endpoint.py  func.py  main.py  parser.py
test/: A.owl  B.owl  C.owl  README.md  animals.owl  bench.py  bench_berlin_sparql.py  bench_sparql.py  perftest.py  regtest.py  test_gca.owl  test_omop_cdm.py  test_parser.py  test_quadstore_slash.sqlite3
